fix(frontend): removed unnecesary css logic

--- a/apps/frontend/src/app/components/layout/layout.module.css
+++ b/apps/frontend/src/app/components/layout/layout.module.css
@@ -1,5 +1,4 @@
 .layout {
-  --padding: 2rem;
-  padding: var(--padding);
-  height: calc(100% - (var(--padding) * 2));
+  padding: 2rem;
+  height: 100%;
 }
