--- a/apps/frontend/src/app/components/login-form/login.module.css
+++ b/apps/frontend/src/app/components/login-form/login.module.css
@@ -46,3 +46,17 @@
   margin-bottom: 1rem;
   font-size: 2rem;
 }
+.error {
+  position: absolute;
+  top: 0;
+  height: 4rem;
+  background: var(--orange-200);
+  width: 98%;
+  display: flex;
+  align-items: center;
+  border: 1px solid gray;
+  margin: 2rem 0;
+  border-radius: 10px;
+  padding: 2rem;
+  color: var(--white);
+}
