--- a/apps/frontend/src/app/pages/register/register.module.css
+++ b/apps/frontend/src/app/pages/register/register.module.css
@@ -21,3 +21,11 @@
   margin: 5rem;
   width: 100%;
 }
+.form input[type=submit]{
+  cursor: pointer;
+  background-color: var(--orange-100);
+  color: var(--white);
+  margin-top: 1rem;
+  border: none;
+  height: 2.4rem;
+}
