--- a/apps/frontend/src/app/pages/register/register.module.css
+++ b/apps/frontend/src/app/pages/register/register.module.css
@@ -4,9 +4,8 @@
   justify-content: center;
   background-color: var(--theme-blue);
 }
-
 .form-wrapper {
-  background-color: white;
+  background-color: var(--white);
   width: 50rem;
   height: 35rem;
   border-radius: 10px;
@@ -27,5 +26,20 @@
   color: var(--white);
   margin-top: 1rem;
   border: none;
-  height: 2.4rem;
+  height: 3.4rem;
+  border-radius: 5px;
+}
+.input {
+  border-radius: 5px;
+  width: 100%;
+  border: 0.1rem solid;
+  height: 3.4rem;
+  margin-bottom: 0.8rem; 
+}
+.title{
+  font-size: 2rem;
+  margin-bottom: 2rem;
+}
+.label{
+  padding-bottom: 0.5rem;
 }
