feat(frontend): register page (#11)
* feat(frontend): register page
Co-authored-by: Santiago Clavijo <santiagocj22@gmail.com>

--- a/apps/frontend/src/app/pages/register/register.module.css
+++ b/apps/frontend/src/app/pages/register/register.module.css
@@ -1,4 +1,4 @@
-.login {
+.register {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -7,11 +7,11 @@
 .form-wrapper {
   background-color: var(--white);
   width: 50rem;
-  height: 35rem;
+  height: 43rem;
   border-radius: 10px;
   box-shadow: 20px 20px 60px #4a907f, -20px -20px 60px #64c2ab;
   display: flex;
-  justify-content: center;
+  align-items: center;
 }
 .form {
   display: flex;
@@ -20,31 +20,37 @@
   margin: 5rem;
   width: 100%;
 }
-.form span,
-.form input {
-  display: block;
-}
-.form input {
-  border-radius: 5px;
-  padding: 1.2rem;
-  width: 100%;
-  border: none;
-}
-.form input[type='text'],
-.form input[type='password'] {
-  border: 0.1rem solid var(--orange-100);
-  margin: 0.5rem 0;
-}
-
-.form input[type='submit'] {
+.active {
   cursor: pointer;
   background-color: var(--orange-100);
   color: var(--white);
   margin-top: 1rem;
+  border: none;
+  height: 3.4rem;
+  border-radius: 5px;
+}
+.disabled {
+  cursor: pointer;
+  background-color: var(--dark-gray);
+  color: var(--white);
+  margin-top: 1rem;
+  border: none;
+  height: 3.4rem;
+  border-radius: 5px;
+}
+.input {
+  border-radius: 5px;
+  width: 100%;
+  border: 0.1rem solid;
+  height: 3.4rem;
+  margin-bottom: 0.8rem;
 }
 .title {
-  margin-bottom: 1rem;
   font-size: 2rem;
+  margin-bottom: 2rem;
+}
+.label {
+  padding-bottom: 0.5rem;
 }
 .error {
   position: absolute;
@@ -59,8 +65,5 @@
   border-radius: 10px;
   padding: 2rem;
   color: var(--white);
-}
-.link {
-  margin-top: 11px;
-  text-decoration: none;
+  justify-content: center;
 }
