--- a/apps/frontend/src/app/components/transactionCards/transactionCards.module.css
+++ b/apps/frontend/src/app/components/transactionCards/transactionCards.module.css
@@ -3,36 +3,52 @@
   height: 97%;
 }
 .card {
+  position: relative;
   margin: 10px;
-  display: flex;
-  align-items: flex-end;
-  flex-direction: column;
+  max-height: 43px;
 }
 .card:hover {
-  background: linear-gradient(
-    to bottom right,
-    var(--white-100),
-    var(--white-200)
-  );
-  border-radius: 5px;
+  background-color: white;
+  box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.2);
   margin: 10px;
-  display: flex;
-  align-items: flex-end;
-  flex-direction: column;
 }
 .button {
-  border-radius: 100%;
-  border: 1px solid var(--white-200);
-  width: 2.5rem;
-  height: 2.5rem;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
+  right: 0px;
+  position: absolute;
+  padding: 0;
+  border: none;
   cursor: pointer;
   margin: 0.5rem 0.5rem 0rem 0rem;
+  background: none;
 }
 .ul {
   list-style-type: none;
-  padding: 0px 20px 0 20px;
-  margin-top: 0px;
+  padding: 0px 14px 0 22px;
+}
+.tooltip {
+  border: 1px solid var(--white-100);
+  padding: 1em;
+  border-radius: 5px;
+  font-size: 1.2rem;
+  background-color: var(--white);
+  box-shadow: 1px 2px 5px 0px rgba(0, 0, 0, 0.75);
+}
+.icon {
+  left: 0px;
+  position: absolute;
+  padding: 0;
+  border: none;
+  cursor: pointer;
+  margin: 0.5rem 0rem 0rem 0.5rem;
+  background: none;
+}
+.list_value {
+  font-size: 20px;
+  padding-left: 20px;
+}
+.list_description {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 200px;
 }
