--- a/apps/frontend/src/app/components/transactionCards/transactionCards.module.css
+++ b/apps/frontend/src/app/components/transactionCards/transactionCards.module.css
@@ -6,12 +6,14 @@
   position: relative;
   margin: 10px;
   max-height: 43px;
+  cursor: pointer;
 }
 .card_active {
   position: relative;
   background-color: white;
   box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.2);
   margin: 10px;
+  cursor: pointer;
 }
 .button {
   right: 0px;
