--- a/apps/frontend/src/app/components/categoryCards/categoryCards.module.css
+++ b/apps/frontend/src/app/components/categoryCards/categoryCards.module.css
@@ -8,7 +8,7 @@
   min-height: 43px;
   cursor: pointer;
 }
-.card:hover {
+.card-active {
   position: relative;
   background-color: white;
   box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.2);
@@ -30,5 +30,5 @@
 }
 
 .list-item {
-  padding-top: 12px;
+  padding: 12px 0px 12px 0px;
 }
