--- a/apps/frontend/src/app/components/transactionDetails/transactionDetails.module.css
+++ b/apps/frontend/src/app/components/transactionDetails/transactionDetails.module.css
@@ -20,8 +20,10 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-end;
+  overflow: hidden;
   padding: 1px 0px 18px 12px;
 }
+
 .list_r {
   height: 100%;
   width: 20%;
