--- a/apps/frontend/src/app/components/transactionDetails/transactionDetails.module.css
+++ b/apps/frontend/src/app/components/transactionDetails/transactionDetails.module.css
@@ -43,3 +43,39 @@
   font-size: 19px;
   color: var(--background-gray);
 }
+.delete-btn {
+  border-radius: 100%;
+  border: 1px solid var(--white-200);
+  width: 3rem;
+  height: 3rem;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+.tooltip {
+  border: 1px solid var(--white-100);
+  padding: 1em;
+  border-radius: 5px;
+  font-size: 1.2rem;
+  background-color: var(--white);
+  box-shadow: 1px 2px 5px 0px rgba(0, 0, 0, 0.75);
+}
+.overlay {
+  background-color: rgba(0, 0, 0, 0.44);
+  position: fixed;
+  inset: 0;
+}
+.modal {
+  border: 1px solid var(--white-100);
+  padding: 1em;
+  border-radius: 5px;
+  background-color: var(--white);
+  box-shadow: 1px 2px 5px 0px rgba(0, 0, 0, 0.75);
+  font-size: 1.4rem;
+  /*Center Modal*/
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
