--- a/apps/frontend/src/app/components/transactionCards/transactionCards.module.css
+++ b/apps/frontend/src/app/components/transactionCards/transactionCards.module.css
@@ -56,3 +56,29 @@
   max-width: 200px;
   padding-left: 2rem;
 }
+.overlay {
+  background-color: rgba(0, 0, 0, 0.44);
+  position: fixed;
+  inset: 0;
+}
+.modal {
+  border: 1px solid var(--white-100);
+  padding: 1em;
+  border-radius: 5px;
+  background-color: var(--white);
+  box-shadow: 1px 2px 5px 0px rgba(0, 0, 0, 0.75);
+  font-size: 1.4rem;
+  /*Center Modal*/
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.tooltip {
+  border: 1px solid var(--white-100);
+  padding: 1em;
+  border-radius: 5px;
+  font-size: 1.2rem;
+  background-color: var(--white);
+  box-shadow: 1px 2px 5px 0px rgba(0, 0, 0, 0.75);
+}
