--- a/apps/frontend/src/app/components/navbar/navbar.module.css
+++ b/apps/frontend/src/app/components/navbar/navbar.module.css
@@ -4,7 +4,7 @@
 }
 .container-active {
   transition: 200ms ease;
-  min-width: 180px;
+  width: 180px;
 }
 .navbar {
   background-color: var(--white);
