--- a/apps/frontend/src/app/components/transactionDetails/transactionDetails.module.css
+++ b/apps/frontend/src/app/components/transactionDetails/transactionDetails.module.css
@@ -1,51 +1,51 @@
 .transaction_details {
   width: 100%;
-  height: 16rem;
+  height: 12rem;
 }
-
-.list_container {
+.transaction-container {
   display: flex;
-  list-style-type: none;
-  padding-inline-start: unset;
-  margin-block-start: unset;
-  margin-block-end: unset;
+  align-items: center;
   height: 100%;
+  justify-content: space-around;
+  flex-wrap: wrap;
   border-bottom: 1px solid var(--white-100);
 }
-.list {
-  height: 100%;
-  width: 20%;
-  border-right: 1px solid var(--white-100);
+.section {
+  width: 30rem;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-end;
-  overflow: hidden;
-  padding: 1px 0px 18px 12px;
+  padding: 5px;
 }
-
-.list_r {
-  height: 100%;
-  width: 20%;
+.elements {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-end;
-  padding: 1px 0px 18px 12px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
 }
-
-.title {
+.category-name {
+  font-size: 12px;
+  color: var(--white-300);
+}
+.date {
+  font-size: 17px;
+  color: var(--white-300);
+}
+.amount-red {
+  font-size: 17px;
+  color: var(--theme-red);
+}
+.amount-green {
+  font-size: 17px;
+  color: var(--theme-blue);
+}
+.description-type {
+  max-width: 250px;
   font-size: 14px;
   color: var(--white-300);
 }
-
-.subtitle {
-  font-size: 19px;
-  color: var(--background-gray);
-}
 .delete-btn {
-  border-radius: 100%;
-  border: 1px solid var(--white-200);
+  border: none;
+  background: none;
   width: 3rem;
   height: 3rem;
   display: inline-flex;
@@ -78,4 +78,54 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+.modal fieldset {
+  border: none;
+  width: 200px;
+  display: flex;
+  justify-content: space-between;
+}
+.modal-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.button-yes {
+  cursor: pointer;
+  border: none;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  width: 73px;
+  height: 35px;
+  border-radius: 4px;
+  padding: 0px 15px;
+  background-color: rgb(255, 229, 229);
+  color: rgb(205, 43, 49);
+}
+.button-yes:hover {
+  background-color: rgb(227 205 205);
+}
+.button-no {
+  cursor: pointer;
+  cursor: pointer;
+  border: none;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  width: 73px;
+  height: 35px;
+  border-radius: 4px;
+  padding: 0px 15px;
+  background-color: rgb(238, 237, 239);
+  color: rgb(111, 110, 119);
+}
+.button-no:hover {
+  background-color: rgb(214 210 217);
+}
+.modal-text {
+  font-size: 16px;
+  color: var(--white-300);
 }
