--- a/apps/frontend/src/app/components/transactionsLineChart/transactionLineChart.module.css
+++ b/apps/frontend/src/app/components/transactionsLineChart/transactionLineChart.module.css
@@ -1,3 +1,6 @@
 .line-chart {
   border-bottom: 1px solid var(--white-100);
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
 }
