--- a/apps/frontend/src/app/components/transactionDetails/transactionDetails.module.css
+++ b/apps/frontend/src/app/components/transactionDetails/transactionDetails.module.css
@@ -1,12 +1,12 @@
 .transaction_details {
   width: 100%;
-  height: 12rem;
 }
 .transaction-container {
+  padding: 10px;
   display: flex;
   align-items: center;
   height: 100%;
-  justify-content: space-around;
+
   flex-wrap: wrap;
   border-bottom: 1px solid var(--white-100);
 }
