--- a/apps/frontend/src/app/components/transactionsLineChart/transactionLineChart.module.css
+++ b/apps/frontend/src/app/components/transactionsLineChart/transactionLineChart.module.css
@@ -4,3 +4,22 @@
   align-items: center;
   justify-content: flex-start;
 }
+.total-amounts-container {
+  padding: 10px;
+}
+.amount-box {
+  padding: 10px;
+}
+.tittle {
+  font-size: 14px;
+  color: var(--white-300);
+}
+
+.amount-expense {
+  color: var(--theme-red);
+  font-size: 16px;
+}
+.amount-entry {
+  color: var(--theme-blue);
+  font-size: 16px;
+}
