feat(frontend): home styles

--- a/apps/frontend/src/app/components/navbar/navbar.module.css
+++ b/apps/frontend/src/app/components/navbar/navbar.module.css
@@ -4,7 +4,8 @@
 }
 .container-active {
   transition: 200ms ease;
-  min-width: 200px;
+  flex: none;
+  width: 200px;
 }
 .navbar {
   background-color: var(--white);
