--- a/apps/frontend/src/app/components/transactions/transactions.module.css
+++ b/apps/frontend/src/app/components/transactions/transactions.module.css
@@ -1,7 +1,7 @@
 .transactions {
   flex: none;
   height: 99%;
-  width: 320px;
+  width: 26%;
   border: 1px solid var(--white-100);
   padding: 2rem;
 }
@@ -67,4 +67,30 @@
 .select_input {
   width: 178px;
   height: 22px;
+}
+
+@media (min-width: 320px) {
+  .transactions {
+    width: 100%;
+    height: 47%;
+  }
+}
+@media (min-width: 768px) {
+  .transactions {
+    flex: none;
+    height: 99%;
+    width: 26%;
+    border: 1px solid var(--white-100);
+    padding: 2rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .transactions {
+    flex: none;
+    height: 99%;
+    width: 26%;
+    border: 1px solid var(--white-100);
+    padding: 2rem;
+  }
 }
