--- a/apps/frontend/src/app/pages/home/home.module.css
+++ b/apps/frontend/src/app/pages/home/home.module.css
@@ -1,6 +1,30 @@
 .layout {
   display: flex;
+  width: 100%;
+  height: 100%;
 }
 .container {
-  width: 100%;
+  width: 70%;
+}
+
+@media (min-width: 320px) {
+  .layout {
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+  }
+  .container {
+    width: 100%;
+    height: 47%;
+  }
+}
+@media (min-width: 768px) {
+  .layout {
+    flex-direction: row;
+  }
+}
+@media (min-width: 1024px) {
+  .layout {
+    flex-direction: row;
+  }
 }
