--- a/apps/frontend/src/app/components/logoutButton/logoutButton.module.css
+++ b/apps/frontend/src/app/components/logoutButton/logoutButton.module.css
@@ -4,12 +4,8 @@
   cursor: pointer;
   color: black;
   font-size: 16px;
-  width: 95%;
   padding: 0;
   display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  height: 50px;
 }
 
 .overlay {
@@ -41,8 +37,6 @@
 .title {
   color: var(--white-300);
   font-family: 'SF mono regular';
-  position: relative;
-  left: 55px;
 }
 .confirm-button {
   margin: 10px;
@@ -85,4 +79,47 @@
 .description {
   color: var(--white-300);
   font-size: 16px;
+}
+@media (min-width: 320px) {
+  .trigger {
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+  }
+  .title {
+    position: relative;
+    top: 27px;
+    left: 0px;
+    font-size: 10px;
+    height: 24px;
+  }
+  .icon {
+    position: relative;
+    left: 0;
+    top: 15px;
+  }
+
+  @media (min-width: 768px) {
+    .trigger {
+      width: 100%;
+      height: 100%;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;
+    }
+    .icon {
+      position: absolute;
+      left: 18px;
+      top: 18px;
+    }
+    .title {
+      position: relative;
+      left: 55px;
+      font-size: 15px;
+      top: 0px;
+      height: 24px;
+    }
+  }
 }
