--- a/apps/frontend/src/app/components/transactionsLineChart/transactionLineChart.module.css
+++ b/apps/frontend/src/app/components/transactionsLineChart/transactionLineChart.module.css
@@ -23,3 +23,24 @@
   color: var(--theme-blue);
   font-size: 16px;
 }
+
+@media (min-width: 320px) {
+  .line-chart {
+    width: 100%;
+    overflow: hidden;
+    flex-wrap: wrap;
+  }
+  .total-amounts-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media (min-width: 768px) {
+  .line-chart {
+    width: auto;
+    overflow: visible;
+  }
+}
