feat(frontend): home page responsive

--- a/apps/frontend/src/app/components/transactionByCategory/transactionByCategory.module.css
+++ b/apps/frontend/src/app/components/transactionByCategory/transactionByCategory.module.css
@@ -68,3 +68,13 @@
   background: none;
   color: var(--white-300);
 }
+@media (min-width: 320px) {
+  .container {
+    justify-content: center;
+  }
+}
+@media (min-width: 768px) {
+  .container {
+    justify-content: flex-start;
+  }
+}
