--- a/apps/frontend/src/app/components/logoutButton/logoutButton.module.css
+++ b/apps/frontend/src/app/components/logoutButton/logoutButton.module.css
@@ -88,6 +88,9 @@
     height: 100%;
     align-items: center;
   }
+  .modal {
+    width: 75%;
+  }
   .title {
     position: relative;
     top: 27px;
@@ -108,6 +111,9 @@
       flex-direction: row;
       justify-content: flex-start;
       align-items: center;
+    }
+    .modal {
+      width: auto;
     }
     .icon {
       position: absolute;
